<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_normal_gray"
    android:orientation="vertical"
    tools:context="pickpoi.PoiSearchActivity">


    <LinearLayout
        android:id="@+id/route_plan_from_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/space04"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/poi_search_return_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/space13"
            android:paddingLeft="@dimen/space13"
            android:paddingRight="@dimen/space16"
            android:paddingBottom="@dimen/space13"
            android:src="@drawable/icon_return"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space04"
            android:background="@drawable/shape_route_plan_edit_bg">


            <ImageView
                android:id="@+id/poi_search_poi_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="@dimen/space20"
                android:paddingRight="@dimen/space08"
                android:paddingTop="@dimen/space08"
                android:paddingBottom="@dimen/space08"
                android:src="@drawable/icon_c_search" />

            <EditText
                android:id="@+id/poi_search_poi_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/poi_search_poi_btn"
                android:background="@null"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:hint="@string/poi_search_hint"
                android:textColorHint="@color/white"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/space10"
                />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space16"
        android:layout_marginBottom="@dimen/space16"
        android:background="@color/white"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/choose_poi_myloc_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space16"
            android:paddingBottom="@dimen/space16"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_color_bg_white_gray"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_sel_loc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poi_search_my_location"
                android:textColor="@color/textDefualt2"
                android:textSize="@dimen/font16"/>



        </LinearLayout>

        <ImageView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:background="@drawable/vertical_dotted_line"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/choose_poi_collect_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space16"
            android:paddingBottom="@dimen/space16"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_color_bg_white_gray"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_sel_start"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poi_search_collect_location"
                android:textColor="@color/textDefualt2"
                android:textSize="@dimen/font16"/>


        </LinearLayout>

        <ImageView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/vertical_dotted_line"/>

        <LinearLayout
            android:id="@+id/choose_poi_map_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space16"
            android:paddingBottom="@dimen/space16"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_color_bg_white_gray"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_sel_map"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poi_search_choose_location_from_map"
                android:textColor="@color/textDefualt2"
                android:textSize="@dimen/font16"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/poiListRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
